<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Destination Iowa State</string><string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button">Continue</string>
    <string name="title">Welcome</string>
    <string name="description">Held prior to the beginning of fall and spring semesters,
        Destination Iowa State is a program designed to ease the transition to college 
        for new Iowa State students.</string>
    <string name="item1">DIS Check In</string>
    <string name="item2">Center of ExCYtment</string>
    <string name="item3">DIS Kickoff</string>
    <string name="item4">Breakfast</string>
    <string name="item5">Residence Hall Activity</string>
    <string name="item6">Scavenger Hunt</string>
    <string name="item7">Late Night at MU</string>
    <string name="item8">Community Service</string>
    <string name="item9">Hypnotist</string>
    <string name="item_a">Scheman Building. 
		Pick up your Iowa State gear before heading to The Center of ExCYtment!</string>
    <string name="item_b">Scheman Courtyard. 
		Your adventure will begin here where you will meet your team and enjoy a picnic dinner.</string>
    <string name="item_c">Hilton Coliseum. 
		Destination Iowa State Kickoff is your official welcome to the Cyclone family!</string>
    <string name="item_d">Central Campus. 
        Teams meet for a pancake breakfast and discuss the day\'s schedule of events.</string>
    <string name="item_e">Houses gather to meet with their Community Advisor.</string>
    <string name="item_f">Teams will complete a scavenger hunt all over the Iowa State campus.</string>
    <string name="item_g">Memorial Union. 
        Experience all the Memorial Union has to offer, inculding free food, activities, a hypnotist, and more!</string>
    <string name="item_h">Complete a service project in your new community.</string>
    <string name="item_i">Hilton Coliseum. 
		SEE the show or BE the show. Michael\'s award winning show will blow your mind, temporarily of course.</string>
		
    <string name="scavengerDescription1">Welcome to the Destination Iowa State Scavenger Hunt!  This awesome adventure
         will take you all over our campus.</string>
    <string name="scavengerDescription2">Select any of the locations above to discover where they lie on our
        beautiful Iowa State Campus.</string>
    <string name="scavengerTitle">Scavenger Hunt</string>
    
    <string name="hunt1title">Memorial Union</string>
    <string name="hunt1text">Go to the Memorial Union and take a picture by the fountain</string>
    <string name="hunt2title">Gerdin</string>
    <string name="hunt2text">Go to the Gerdin Business Building and take a picture inside the Business Cafe</string>
    <string name="hunt3title">Marston Water Tower</string>
    <string name="hunt3text">Go to the Marston Water Tower and take a picture underneath it</string>
    <string name="hunt4title">Catt Hall</string>
    <string name="hunt4text">Go to Catt Hall and take a picture on the stairs</string>
    <string name="hunt5title">Beardshear</string>
    <string name="hunt5text">Go to Beardshear Hall and take a picture outside the President\'s Office</string>
    <string name="hunt6title">Parks Library</string>
    <string name="hunt6text">Go to Parks Library and take a picture in Bookends Cafe</string>
    <string name="hunt7title">Hoover Hall</string>
    <string name="hunt7text">Go to Hoover Hall and take a picture inside the Kent-Stein Foundation Auditorium</string>
    <string name="hunt8title">Enrollment Services</string>
    <string name="hunt8text">Go to the Enrollment Services building and take a picture by the doors</string>
    <string name="hunt9title">Lebaron Hall</string>
    <string name="hunt9text">Go to Lebaron Hall and take a picture by the front doors</string>
    
    <string name="imageDesc">Image</string>
    
    <string name="content1">DIS Check In</string>
    <string name="content_1">i bet i win first.</string>
    <string name="content_2">hi</string>
    <string name="content_3">hello</string>
    <string name="content_4">wasssupppp</string>
    <string name="content_5">yeehaawwww</string>
    <string name="content_6">aloha</string>
    <string name="content_7">theres a snake in my boot</string>
    <string name="content_8">rockie smells</string>

</resources>