<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/trice"
    tools:context=".ScheduleActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="320dp"
        android:layout_height="450dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#55000000" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:paddingTop="25dp"
                android:text="@string/item1"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#66000000"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="contentPage1" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:gravity="left"
                android:background="#66000000"
                android:paddingLeft="4dp"
                android:text="@string/item_a"
                android:clickable="true"
                android:onClick="contentPage1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:paddingTop="25dp"
                android:background="#00000000"
                android:text="@string/item2"
                android:clickable="true"
                android:onClick="contentPage2" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:gravity="left"
                android:background="#00000000"
                android:paddingLeft="4dp"
                android:text="@string/item_b"
                android:clickable="true"
                android:onClick="contentPage2" />

            <TextView
                android:id="@+id/textView3"
				android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:paddingTop="25dp"
                android:background="#66000000"
                android:text="@string/item3"
                android:clickable="true"
                android:onClick="contentPage3" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:gravity="left"
                android:background="#66000000"
                android:paddingLeft="4dp"
                android:text="@string/item_c"
                android:clickable="true"
                android:onClick="contentPage3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:paddingTop="25dp"
                android:text="@string/item4"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#00000000"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="contentPage4" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:gravity="left"
                android:background="#00000000"
                android:paddingLeft="4dp"
                android:text="@string/item_d"
                android:clickable="true"
                android:onClick="contentPage4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:paddingTop="25dp"
                android:text="@string/item5"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#66000000"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="contentPage5" />
            
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:gravity="left"
                android:background="#66000000"
                android:paddingLeft="4dp"
                android:text="@string/item_e"
                android:clickable="true"
                android:onClick="contentPage5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:paddingTop="25dp"
                android:text="@string/item6"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#00000000"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="scavengerHunt" />
            
            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:gravity="left"
                android:background="#00000000"
                android:paddingLeft="4dp"
                android:text="@string/item_f"
                android:clickable="true"
                android:onClick="scavengerHunt" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:paddingTop="25dp"
                android:background="#66000000"
                android:text="@string/item7"
                android:clickable="true"
                android:onClick="contentPage6" />
            
            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:gravity="left"
                android:background="#66000000"
                android:paddingLeft="4dp"
                android:text="@string/item_g"
                android:clickable="true"
                android:onClick="contentPage6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:paddingTop="25dp"
                android:background="#00000000"
                android:text="@string/item8"
                android:clickable="true"
                android:onClick="contentPage7" />
            
            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:gravity="left"
                android:background="#00000000"
                android:paddingLeft="4dp"
                android:text="@string/item_h"
                android:clickable="true"
                android:onClick="contentPage7" />
            
            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:paddingTop="25dp"
                android:background="#00000000"
                android:text="@string/item9"
                android:clickable="true"
                android:onClick="contentPage8" />
            
            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:gravity="left"
                android:background="#00000000"
                android:paddingLeft="4dp"
                android:text="@string/item_i"
                android:clickable="true"
                android:onClick="contentPage8" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
