<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/dis_background"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:textColor="#ffffff"
        android:onClick="nextPage"
        android:text="@string/button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:textColor="#ffffff"
        android:fontFamily="arial"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#55000000"
        android:text="@string/description" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="44sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:gravity="center"
        android:text="@string/title" />
    
</RelativeLayout>
