<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back1"
    android:columnCount="1"
    android:columnWidth="90dp"
    android:gravity="center"
    android:horizontalSpacing="10dp"
    android:numColumns="auto_fit"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    android:stretchMode="columnWidth"
    android:verticalSpacing="50dp" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:clickable="true"
        android:contentDescription="@string/imageDesc"
        android:onClick="hunt1"
        android:src="@drawable/b1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:clickable="true"
        android:contentDescription="@string/imageDesc"
        android:onClick="hunt2"
        android:src="@drawable/b2" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="2"
        android:clickable="true"
        android:contentDescription="@string/imageDesc"
        android:onClick="hunt3"
        android:src="@drawable/b3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:clickable="true"
        android:contentDescription="@string/imageDesc"
        android:onClick="hunt4"
        android:src="@drawable/b4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:clickable="true"
        android:contentDescription="@string/imageDesc"
        android:onClick="hunt5"
        android:src="@drawable/b5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="3"
        android:clickable="true"
        android:contentDescription="@string/imageDesc"
        android:onClick="hunt6"
        android:src="@drawable/b6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:clickable="true"
        android:contentDescription="@string/imageDesc"
        android:onClick="hunt7"
        android:src="@drawable/b7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:clickable="true"
        android:contentDescription="@string/imageDesc"
        android:onClick="hunt8"
        android:src="@drawable/b8" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="4"
        android:clickable="true"
        android:contentDescription="@string/imageDesc"
        android:onClick="hunt9"
        android:src="@drawable/b9" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="1"
        android:background="#22000000"
        android:gravity="center"
        android:text="@string/scavengerDescription1"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="5"
        android:background="#22000000"
        android:gravity="center"
        android:text="@string/scavengerDescription2"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:background="#22000000"
        android:gravity="center"
        android:text="@string/scavengerTitle"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

</GridLayout>